# vaultspec-rag

./: .env.example  .gitattributes  .gitignore  .markdownlint.json  .mcp.json  .mdformat.toml  .pre-commit-config.yaml  .pymarkdown.json  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  RELEASING.md  conftest.py  justfile  lychee.toml  pyproject.toml  release-please-config.json  taplo.toml
.agents/: mcp_config.json
.agents/rules/: vaultspec-archive-discipline.builtin.md  vaultspec-cli.builtin.md  vaultspec-discovery.builtin.md  vaultspec-plan-editing-discipline.builtin.md
.claude/agents/: vaultspec-adr-researcher.md  vaultspec-code-reviewer.md  vaultspec-codifier.md  vaultspec-docs-curator.md  vaultspec-high-executor.md  vaultspec-low-executor.md  vaultspec-project-coordinator.md  vaultspec-reference-auditor.md  vaultspec-researcher.md  vaultspec-standard-executor.md  vaultspec-writer.md
.claude/rules/: firmware-reference-parity.builtin.md  gpu-consumer-single-thread.md  gpu-lock-wraps-forward-passes-only.md  managed-singleton-paths-isolate-storage-dir-in-tests.md  operator-views-are-bounded.md  vaultspec-cli.builtin.md  vaultspec-codify.builtin.md  vaultspec-dry-run-discipline.builtin.md  vaultspec-rag.builtin.md  vaultspec-system.builtin.md
.codex/: config.toml
.codex/rules/: index-workers-stay-cpu-only.md  pinned-binaries-verify-before-execute.md  rerankers-score-real-content.md  service-domain-owns-operability.md  vaultspec-archive-discipline.builtin.md  vaultspec-cli.builtin.md  vaultspec-codify.builtin.md  vaultspec-dry-run-discipline.builtin.md  vaultspec-rag.builtin.md  vaultspec-system.builtin.md  vaultspec.builtin.md
.docs-campaign/: corpus-ia.md  ground-truth.md
.gemini/: SYSTEM.md
.gemini/agents/: vaultspec-adr-researcher.md  vaultspec-code-reviewer.md  vaultspec-codifier.md  vaultspec-docs-curator.md  vaultspec-high-executor.md  vaultspec-low-executor.md  vaultspec-project-coordinator.md  vaultspec-reference-auditor.md  vaultspec-researcher.md  vaultspec-standard-executor.md  vaultspec-writer.md
.gemini/rules/: generated-reference-is-cli-owned.builtin.md  storage-locks-are-backend-aware.md  vaultspec-cli.builtin.md  vaultspec-plan-editing-discipline.builtin.md  vaultspec.builtin.md
.github/: actionlint.yaml
.github/workflows/: add-to-project.yml  bootstrap-branch.yml  ci.yml  claude.yml  gpu-integration.yml  publish.yml  release-please.yml
.vault/: cicl.index.md  gpu-rag-stack.index.md  index-progress-bars.index.md  install-command.index.md  install-cuda.index.md  release-readiness.index.md  security-hardening.index.md  service-graph.index.md  service-lifecycle-tests.index.md  test-and-paths.index.md  vaultragignore.index.md
.vault/adr/: 2026-03-06-gpu-only-rag-stack-adr.md  2026-03-07-blake2b-file-hashing-adr.md  2026-03-07-manual-node-walking-adr.md  2026-03-07-mcp-sync-tools-adr.md  2026-03-07-path-resolve-engine-cache-adr.md  2026-03-07-qdrant-filter-on-prefetch-adr.md  2026-03-07-qdrant-payload-indexes-local-adr.md  2026-03-07-qwen3-no-document-prompt-adr.md  2026-03-07-score-normalization-adr.md  2026-03-07-threading-lock-for-singleton-adr.md  2026-03-07-vaultgraph-cache-adr.md  2026-04-01-cicl-pipeline-adr.md  2026-04-02-service-graph-adr.md  2026-04-04-security-hardening-adr.md  2026-04-04-test-and-paths-adr.md  2026-04-04-vaultragignore-adr.md  2026-04-05-service-lifecycle-tests-adr.md  2026-04-06-ecosystem-integration-adr.md  2026-04-12-index-progress-bars-adr.md  2026-04-12-store-eviction-log-rotation-adr.md  2026-04-12-vaultspec-rag-install-adr.md  2026-04-22-install-cuda-adr.md  2026-05-28-cli-backend-parity-adr.md  2026-05-28-cli-search-filters-adr.md  2026-05-30-cli-index-default-adr.md  2026-05-30-cli-json-output-adr.md  2026-05-30-cli-path-glob-adr.md  2026-05-30-service-lifecycle-adr.md  2026-05-31-codebase-hygiene-sweep-adr.md  2026-05-31-search-postprocess-adr.md  2026-05-31-server-mcp-route-adr.md  2026-05-31-service-token-identity-adr.md  2026-05-31-test-coverage-128-adr.md  2026-05-31-win-shutdown-log-adr.md  2026-06-01-module-split-adr.md  2026-06-01-service-observability-adr.md  2026-06-01-service-operability-adr.md  2026-06-02-index-gpu-pipeline-adr.md  2026-06-02-index-perf-hardening-adr.md  2026-06-02-onnx-encoder-backend-adr.md  (+37 more)
.vault/audit/: 2026-03-06-cli-api-audit.md  2026-03-06-cli-mcp-audit.md  2026-03-06-codebase-indexer-audit.md  2026-03-06-config-dependencies-audit.md  2026-03-06-embeddings-gpu-pivot-audit.md  2026-03-06-indexer-pipeline-audit.md  2026-03-06-mcp-security-audit.md  2026-03-06-search-pipeline-audit.md  2026-03-06-test-infrastructure-audit.md  2026-03-07-adr-compliance-audit.md  2026-03-07-adr-test-coverage-audit.md  2026-03-07-api-adr-tests-audit.md  2026-03-07-api-config-audit.md  2026-03-07-cli-round14-audit.md  2026-03-07-config-init-round12-audit.md  2026-03-07-embeddings-round10-audit.md  2026-03-07-final-sweep-round27-audit.md  2026-03-07-indexer-round23-audit.md  2026-03-07-indexer-round8-audit.md  2026-03-07-indexer-store-api-audit.md  2026-03-07-integration-tests-round13-audit.md  2026-03-07-integration-tests-round26-audit.md  2026-03-07-mcp-round11-audit.md  2026-03-07-orchestrator-log-audit.md  2026-03-07-pending-task-verification-audit.md  2026-03-07-search-cli-mcp-audit.md  2026-03-07-search-round7-audit.md  2026-03-07-store-embeddings-audit.md  2026-03-07-store-round9-audit.md  2026-03-07-test-compliance-round2-audit.md  2026-03-07-test-live-audit.md  2026-03-07-test-mandate-audit.md  2026-03-07-tests-round25-audit.md  2026-03-08-compliance-reaudit-audit.md  (+53 more)
.vaultspec/: providers.json
docs/: README.md  architecture.md  automation.md  backends.md  cli.md  configuration.md  getting-started.md  glossary.md  indexing.md  installation.md  mcp.md  preprocessing-hooks.md  search-and-index.md  service-discovery.md  service-mode.md
test-project/: README.md
tests/: conftest.py  constants.py  smoke_check.py
tools/: _bp_triage.py  complexity_gate.py  health_report.py  module_length.py  profile_vault_index.py
(+1680 files in other folders)
